feat: Add chat and theme capabilities
Introduces real-time chat functionality between sellers and suppliers, along with a theming system for improved user experience. This includes setting up Agora RTM SDK, polyfilling Buffer and Long, and integrating new components and services for chat management and theme switching.

Also includes an onboarding flow for users to define their roles and categories, enhancing the personalization of their experience. Updates constants to support expiry dates for inventory items.

--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "firebase/": "https://aistudiocdn.com/firebase@^12.6.0/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.1"
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.29.1",
+    "agora-rtm-sdk": "https://aistudiocdn.com/agora-rtm-sdk@^1.5.1",
+    "buffer": "https://aistudiocdn.com/buffer@^6.0.3",
+    "long": "https://aistudiocdn.com/long@^5.2.3"
   }
 }
 </script>
 </head>
-  <body class="bg-gray-900 text-white">
+  <body class="bg-gray-100 text-gray-900 dark:bg-gray-900 dark:text-white transition-colors duration-300">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
