feat: Implement subscription and transaction recording
This commit introduces the ability for users to upgrade to a 'pro' plan and records these transactions for administrative purposes. It also includes UI improvements for displaying chat participants and a default dark theme setting.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -25,15 +25,18 @@
     </script>
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css" />
 <script>
-  // Apply theme from localStorage before React loads to prevent FOUC and theme-related render issues.
+  // Apply theme from localStorage before React loads to prevent FOUC. 
+  // Default to 'dark' if no setting found.
   (function() {
     try {
       const theme = localStorage.getItem('theme');
-      if (theme === 'dark' || (!theme && window.matchMedia('(prefers-color-scheme: dark)').matches)) {
+      if (theme === 'light') {
+        document.documentElement.classList.remove('dark');
+      } else {
         document.documentElement.classList.add('dark');
       }
     } catch (e) {
-      // In case of any error (e.g., localStorage is disabled), do nothing.
+      document.documentElement.classList.add('dark');
     }
   })();
 </script>
