--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     "aos/": "https://aistudiocdn.com/aos@^2.3.4/",
     "vite": "https://aistudiocdn.com/vite@^7.2.4",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
-    "@vitejs/plugin-legacy": "https://aistudiocdn.com/@vitejs/plugin-legacy@^7.2.1"
+    "@vitejs/plugin-legacy": "https://aistudiocdn.com/@vitejs/plugin-legacy@^7.2.1",
+    "@capacitor/cli": "https://aistudiocdn.com/@capacitor/cli@^7.4.4"
   }
 }
 </script>
